syntax = "proto3";

package v1;

//import "google/protobuf/timestamp.proto";
option go_package = "github.com/henrysworld/study2022go/ch37/grpc/proto";

service MiniBlog{
  rpc ListUser (ListUserRequest) returns (ListUserResponse){}
  rpc ListUserServerStream (ListUserRequest) returns (stream ListUserResponse) {}
  rpc ListUserClientStream (stream ListUserRequest) returns (ListUserResponse) {}
  rpc ListUserBidirectional(stream ListUserRequest) returns (stream ListUserResponse) {}
}

message UserInfo {
  string username = 1;
  string nickname = 2;
  string email = 3;
  string phone = 4;
  int64 postCount = 5;
//  google.protobuf.Timestamp createdAt = 6;
//  google.protobuf.Timestamp updatedAt = 7;
}

message ListUserRequest {
  optional int64 limit = 1;
  optional int64 offset = 2;
}

message ListUserResponse{
  int64 totalCount = 1;
  repeated UserInfo Users = 2;
}

message ModifierExample{
  reserved 2, 15 to 25; // 保留标识符(reserved)可以避免其他人在未来使用不该使用的标志号
  string username = 1;
  optional string nickname = 3; // 可选值
  bool hasEmail = 4;
  repeated string phones = 5; // 任意数量（包括0），可以看成是一个数组.
  bytes content = 6;
  int32 money = 7;
  int64 count = 8;
  map<string, int64> address = 9; // 编译后：`Address   map[string]string`
//  google.protobuf.Timestamp createdAt = 10;
}

//
//message ContinueMsgResponse{
//  string msg = 1;
//  repeated MemInfoField memInfoField = 2;
//}
//message MemInfoField{
//  repeated int32 mem = 1 [json_name = ""];
//}
//
//
//message MyMessage {
//  string msg = 1;
//  repeated repeated int32 memInfoField = 2;
//}